    gracefully handle hardlinks, where the target files already
    exists.  (Closes: #867881)
  * dh_install: Re-instate bug compatibility with debhelper (<< 10.6)
    where (some) path arguments where split on space as if it had
    been parsed in the config file.  (Closes: #867866)
  * dh_installdocs: Ditto.
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.

 -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000

debhelper (10.6.3) unstable; urgency=medium

  * Makefile: Use "dpkg-parsechangelog -S" rather than
    "dpkg-parsechangelog | grep".
  * debhelper.pod: Use substitution to ensure examples always use the
    recommended compatibility level.
  * Dh_Lib.pm: Embed tool versions into autoscripts so lintian can
    extract and display them.  Tools that want to rely on this
    feature should set "$main::VERSION" to the version of the tool.
  * dh_install: Rewrite and re-enable optimization so it
    deterministically and gracefully handles cases like #866405.
  * dh: Support new "pkgfile-logged" hint, which can be used by
    helpers that log what files they install.  It enables dh to
    see that it may need to run a helper that would install no
    files, but log what it would have done to avoid making
    dh_missing complain.  Thanks to Michael Stapelberg for
    reporting the issue and testing the fix.  (Closes: #867246)
  * PROGRAMMING: Document how to write "logging" helpers that work
    with dh_missing.

 -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 08:24:34 +0000

debhelper (10.6.2) unstable; urgency=medium

  * Refactor test suite and support running tests in parallel.
  * Add a test case for #866570.
  * dh_compress: Apply patch from Sven Joachim to fix a
    regression in 10.5.1.  (Closes: #866713)
  * dh_installman: Fix regression introduced in 10.5.1 that
    caused a "file not found" error when using -P with an
    absolute argument.  Thanks to Adrian Bunk for reporting