@@ -21,6 +21,10 @@ debhelper (10.6.4) UNRELEASED; urgency=medium
   * dh_installexamples: Ditto.
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
+  * Dh_Lib.pm: Fix a regression in handling of dangling symlinks for
+    native file copying that caused dh_installdocs to no longer replace
+    dangling symlinks with real files.  Thanks to Stéphane Glondu
+    for the report.  (Closes: #868204)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 09 Jul 2017 12:30:20 +0000
 
